fix overflow of example image

--- a/style.css
+++ b/style.css
@@ -234,6 +234,7 @@ html, body {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    overflow-y: scroll;
 }
 
 .info {
